--- a/crates/bergamot-server/webui/style.css
+++ b/crates/bergamot-server/webui/style.css
@@ -267,23 +267,16 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
     float: left;
     margin-top: 1px;
     margin-right: 5px;
-    width: 88px;
+    width: 38px;
     height: 36px;
     cursor: pointer;
     opacity: 1;
 }
 
-#Logo i,
-#Logo i:hover {
-    opacity: 1;
-    filter: alpha(opacity=100);
-}
-
-.img-logo {
-    background-position: -8px -139px;
-    width: 88px;
-    height: 38px;
+.logo-img {
     display: inline-block;
+    width: 38px;
+    height: 38px;
 }
 
 #PlayBlock {
