--- a/crates/bergamot-server/webui/bootstrap-compat.css
+++ b/crates/bergamot-server/webui/bootstrap-compat.css
@@ -1137,12 +1137,19 @@ body.navfixed .navbar-fixed-top {
 	padding: 0;
 }
 
-.pagination > li {
+.pagination ul {
+	display: inline-flex;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.pagination li {
 	display: inline;
 }
 
-.pagination > li > a,
-.pagination > li > span {
+.pagination li a,
+.pagination li span {
 	float: left;
 	padding: 0 14px;
 	line-height: 34px;
@@ -1153,28 +1160,40 @@ body.navfixed .navbar-fixed-top {
 	background-color: var(--pico-card-background-color, #fff);
 }
 
-.pagination > li:first-child > a,
-.pagination > li:first-child > span {
+.pagination li:first-child a,
+.pagination li:first-child span {
 	border-top-left-radius: var(--pico-border-radius, 4px);
 	border-bottom-left-radius: var(--pico-border-radius, 4px);
 }
 
-.pagination > li:last-child > a,
-.pagination > li:last-child > span {
+.pagination li:last-child a,
+.pagination li:last-child span {
 	border-top-right-radius: var(--pico-border-radius, 4px);
 	border-bottom-right-radius: var(--pico-border-radius, 4px);
 }
 
-.pagination > li.active > a,
-.pagination > li.active > span {
+.pagination li.active a,
+.pagination li.active span {
 	color: var(--pico-primary-inverse, #fff);
 	background-color: var(--pico-primary-background, #0088cc);
 	border-color: var(--pico-primary-border, #0088cc);
 	cursor: default;
 }
 
-.pagination > li > a:hover {
+.pagination li a:hover {
 	background-color: var(--pico-form-element-background-color, #eee);
+}
+
+.pagination li.disabled a,
+.pagination li.disabled a:hover {
+	color: var(--pico-muted-color, #999);
+	background-color: var(--pico-card-background-color, #fff);
+	cursor: default;
+	pointer-events: none;
+}
+
+.pagination li a:focus {
+	outline: 0;
 }
 
 
