--- a/crates/bergamot-server/webui/dark-theme.css
+++ b/crates/bergamot-server/webui/dark-theme.css
@@ -30,19 +30,6 @@ body {
     filter: invert(1);
 }
 
-.btn-default {
-	color: #f5f5f5;
-	background-color: #414141;
-	background-image: -ms-linear-gradient(top, #555555, #222222);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#555555), to(#222222));
-	background-image: -webkit-linear-gradient(top, #555555, #222222);
-	background-image: -o-linear-gradient(top, #555555, #222222);
-	background-image: -moz-linear-gradient(top, #555555, #222222);
-	background-image: linear-gradient(top, #555555, #222222);
-	background-repeat: repeat-x;
-	border-color: #222222 #222222 #000000;
-}
-
 .btn-active {
 	color: #333;
 	background-color: #bbb;
@@ -65,8 +52,7 @@ body {
 	opacity: unset;
 }
 
-textarea,
-.btn-default:hover:not(.btn-active) {
+textarea {
 	color: inherit;
 	background-color: #212529;
 	background-origin: border-box;
@@ -76,36 +62,8 @@ textarea,
 	color: inherit;
 }
 
-.pagination a:hover {
-	background-color: #212529;
-}
-
 .modal .input-xlarge {
 	background-color: #212529;
-}
-
-.btn-primary {
-	background-color: #0074CC;
-}
-
-.btn-primary:hover {
-	background-color: #0055CC;
-}
-
-.btn-danger {
-	background-color: #da4f49;
-}
-
-.btn-danger:hover {
-	background-color: #bd362f;
-}
-
-.btn-info {
-	background-color: #5bc0de;
-}
-
-.btn-info:hover {
-	background-color: #2f96b4;
 }
 
 .system-health-badge--info,
@@ -226,15 +184,6 @@ table.table-cancheck tr.checkremove div.img-check {
 select {
 	color: inherit;
 	background-color: #212529;
-}
-
-.navbar-fixed-top .navbar-inner {
-	padding: 0;
-	min-height: 0;
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-	box-shadow: none;
-	color: #bbb;
 }
 
 #PlayCaret {
