style(webui): remove obsolete vendor-prefixed CSS
Remove ~180 lines of 2010-era vendor prefixes that are unnecessary
in 2026 with evergreen browsers:
- -webkit-/-moz-/-ms-/-o- prefixed gradients, border-radius, box-shadow,
  animation, transform, background-size, user-select
- IE-only filter: alpha(opacity=...) and filter: progid:DXImageTransform
- Obsolete linear-gradient(top,...) syntax -> linear-gradient(to bottom,...)
- Duplicate/redundant border fallback declarations
- Prefixed @keyframes blocks

Kept: ::-webkit-calendar-picker-indicator (WebKit pseudo-element, still
needed for dark mode date inputs in Chromium/Safari).

--- a/crates/bergamot-server/webui/light-theme.css
+++ b/crates/bergamot-server/webui/light-theme.css
@@ -24,12 +24,7 @@ html {
 .btn-active {
 	color: #f5f5f5;
 	background-color: #414141;
-	background-image: -ms-linear-gradient(top, #555555, #222222);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#555555), to(#222222));
-	background-image: -webkit-linear-gradient(top, #555555, #222222);
-	background-image: -o-linear-gradient(top, #555555, #222222);
-	background-image: -moz-linear-gradient(top, #555555, #222222);
-	background-image: linear-gradient(top, #555555, #222222);
+	background-image: linear-gradient(to bottom, #555555, #222222);
 	background-repeat: repeat-x;
 	border-color: #222222 #222222 #000000;
 	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
@@ -72,7 +67,6 @@ html {
 	border-top-color: #ffffff;
 	border-bottom-color: #ffffff;
 	opacity: 0.75;
-	filter: alpha(opacity=75);
 }
 
 #InfoBlock div:hover {
@@ -84,14 +78,7 @@ html {
 	outline: 0;
 	color: #000;
 	text-shadow: none;
-	background: rgb(255,255,255); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgb(255,255,255) 0%, rgb(238,238,238) 45%, rgb(231,231,231) 55%, rgb(255,255,255) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(255,255,255)), color-stop(45%,rgb(238,238,238)), color-stop(55%,rgb(231,231,231)), color-stop(100%,rgb(255,255,255))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgb(255,255,255) 0%,rgb(238,238,238) 45%,rgb(231,231,231) 55%,rgb(255,255,255) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgb(255,255,255) 0%,rgb(238,238,238) 45%,rgb(231,231,231) 55%,rgb(255,255,255) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgb(255,255,255) 0%,rgb(238,238,238) 45%,rgb(231,231,231) 55%,rgb(255,255,255) 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  rgb(255,255,255) 0%,rgb(238,238,238) 45%,rgb(231,231,231) 55%,rgb(255,255,255) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(to bottom, rgb(255,255,255) 0%, rgb(238,238,238) 45%, rgb(231,231,231) 55%, rgb(255,255,255) 100%);
 }
 
 /* headers in navbar menu */
@@ -112,7 +99,6 @@ html {
 	border-top-color: #ffffff;
 	border-bottom-color: #ffffff;
 	opacity: 0.75;
-	filter: alpha(opacity=75);
 }
 
 .focused .search-caret-button .caret {
@@ -156,8 +142,6 @@ div.check {
 	border: 1px solid #DDDDDD;
 	margin-top: 2px;
 	margin-bottom: 3px;
-	-webkit-border-radius: 2px;
-	-moz-border-radius: 2px;
 	border-radius: 2px;
 }
 div.check:hover {
@@ -207,13 +191,7 @@ tr.checked:nth-child(odd) .progress {
 /* style for queued downloads, based on ".progress-success.progress-striped .bar" from bootstrap.css */
 .progress-none.progress-striped .bar {
 	background-color: #c0c0c0;
-	background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
-	background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-	background-image: -moz-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-	background-image: -ms-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-	background-image: -o-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 	background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#d0d0d0', endColorstr='#c0c0c0', GradientType=0);
 }
 
 td.dropdown-cell > div:not(.dropdown-disabled):hover::after {
@@ -257,12 +235,8 @@ td:hover span.none-category {
 	border: 1px solid #eee;
 	padding: 4px;
 	padding-right: 20px;
-	-webkit-border-radius: 3px;
-	   -moz-border-radius: 3px;
-			border-radius: 3px;
-	-webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.025);
-	   -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.025);
-			box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.025);
+	border-radius: 3px;
+	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.025);
 }
 
 .dragover, .dragover .table-striped tbody tr:nth-child(odd) td, .dragover .table-striped tbody tr:nth-child(odd) th {
@@ -311,8 +285,6 @@ td:hover span.none-category {
 }
 
 #ConfigNav {
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
 	border-radius: 3px;
 	border: 1px solid #eeeeee;
 	padding: 8px 15px;
@@ -322,8 +294,6 @@ td:hover span.none-category {
 
 #ConfigContent .config-header {
 	padding: 7px;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
 	border-radius: 3px;
 	margin-bottom: 20px;
 	padding-right: 0;
@@ -337,9 +307,7 @@ td:hover span.none-category {
 	background-color: #ffffff;
 	background-image: none;
 	border: none;
-  -webkit-box-shadow: none;
-	 -moz-box-shadow: none;
-		  box-shadow: none;
+	box-shadow: none;
 }
 
 span.help-option-title {
@@ -356,8 +324,6 @@ span.help-option-title {
 	background-color: #505050;
 	color: #ffffff;
 	padding: 7px;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
 	border-radius: 3px;
 	margin-bottom: 20px;
 	border-bottom: 1px solid #eeeeee;
@@ -379,9 +345,7 @@ span.help-option-title {
 
 .btn-switch input:focus {
 	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-	-webkit-box-shadow: none;
-	   -moz-box-shadow: none;
-			box-shadow: none;
+	box-shadow: none;
 }
 
 .search .option-name:hover {
@@ -414,9 +378,7 @@ span.help-option-title {
 	left: 15px;
 	right: 15px;
 	overflow-y: auto;
-	-webkit-border-radius: 3px;
-	 -moz-border-radius: 3px;
-		  border-radius: 3px;
+	border-radius: 3px;
 }
 
 #FeedFilterDialog_FilterBlock {
@@ -430,11 +392,8 @@ span.help-option-title {
 	padding: 0;
 	font-size: 12px;
 	line-height: 18px;
-	border: 1px solid #ccc;
 	border: 1px solid rgba(0, 0, 0, 0.15);
-	-webkit-border-radius: 4px;
-	 -moz-border-radius: 4px;
-		  border-radius: 4px;
+	border-radius: 4px;
 }
 
 #FeedFilterDialog_FilterHeader {
@@ -456,7 +415,6 @@ span.help-option-title {
 	height: auto;
 	overflow: hidden;
 	background-color: #ffffff;
-	border-right: 1px solid #ccc;
 	border-right: 1px solid rgba(0, 0, 0, 0.15);
 }
 
