--- a/crates/bergamot-server/webui/dark-theme.css
+++ b/crates/bergamot-server/webui/dark-theme.css
@@ -33,17 +33,10 @@ body {
 .btn-active {
 	color: #333;
 	background-color: #bbb;
-	background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
-	background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
-	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
-	background-image: linear-gradient(top, #ffffff, #e6e6e6);
-	background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
+	background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
 	background-repeat: repeat-x;
 	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 	border-bottom-color: #b3b3b3;
-	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-	-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
@@ -190,7 +183,6 @@ select {
 	margin-top: 3px;
 	margin-left: 9px;
 	opacity: 0.75;
-	filter: alpha(opacity=75);
 }
 
 .dropup .caret, .navbar-fixed-bottom .dropdown .caret {
@@ -203,14 +195,7 @@ select {
 	outline: 0;
 	color: #000;
 	text-shadow: none;
-	background: rgb(255,255,255); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgb(255,255,255) 0%, rgb(238,238,238) 45%, rgb(231,231,231) 55%, rgb(255,255,255) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(255,255,255)), color-stop(45%,rgb(238,238,238)), color-stop(55%,rgb(231,231,231)), color-stop(100%,rgb(255,255,255))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgb(255,255,255) 0%,rgb(238,238,238) 45%,rgb(231,231,231) 55%,rgb(255,255,255) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgb(255,255,255) 0%,rgb(238,238,238) 45%,rgb(231,231,231) 55%,rgb(255,255,255) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgb(255,255,255) 0%,rgb(238,238,238) 45%,rgb(231,231,231) 55%,rgb(255,255,255) 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  rgb(255,255,255) 0%,rgb(238,238,238) 45%,rgb(231,231,231) 55%,rgb(255,255,255) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#f5f5f5',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(to bottom, rgb(255,255,255) 0%, rgb(238,238,238) 45%, rgb(231,231,231) 55%, rgb(255,255,255) 100%);
 }
 
 /* headers in navbar menu */
@@ -231,7 +216,6 @@ select {
 	border-top-color: #f5f5f5;
 	border-bottom-color: #f5f5f5;
 	opacity: 0.75;
-	filter: alpha(opacity=75);
 }
 
 .focused .search-caret-button .caret {
@@ -273,8 +257,6 @@ div.check {
 	border: 1px solid #626262;
 	margin-top: 2px;
 	margin-bottom: 3px;
-	-webkit-border-radius: 2px;
-	-moz-border-radius: 2px;
 	border-radius: 2px;
 }
 div.check:hover {
@@ -314,13 +296,7 @@ tr.checked:nth-child(odd) {
 /* style for queued downloads, based on ".progress-success.progress-striped .bar" from bootstrap.css */
 .progress-none.progress-striped .bar {
 	background-color: #c0c0c0;
-	background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
-	background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-	background-image: -moz-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-	background-image: -ms-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-	background-image: -o-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 	background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#d0d0d0', endColorstr='#c0c0c0', GradientType=0);
 }
 
 td.dropdown-cell > div:not(.dropdown-disabled):hover::after {
@@ -362,12 +338,8 @@ td:hover span.none-category {
 	border: 1px solid #626262;
 	padding: 4px;
 	padding-right: 20px;
-	-webkit-border-radius: 3px;
-	   -moz-border-radius: 3px;
-			border-radius: 3px;
-	-webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.025);
-	   -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.025);
-			box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.025);
+	border-radius: 3px;
+	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.025);
 }
 
 .dragover, .dragover .table-striped tbody tr:nth-child(odd) td, .dragover .table-striped tbody tr:nth-child(odd) th {
@@ -415,8 +387,6 @@ td:hover span.none-category {
 }
 
 #ConfigNav {
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
 	border-radius: 3px;
 	border: 1px solid #626262;
 	padding: 8px 15px;
@@ -426,8 +396,6 @@ td:hover span.none-category {
 
 #ConfigContent .config-header {
 	padding: 7px;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
 	border-radius: 3px;
 	margin-bottom: 20px;
 	padding-right: 0;
@@ -440,9 +408,7 @@ td:hover span.none-category {
 	margin-right: 0;
 	background-image: none;
 	border: none;
-  -webkit-box-shadow: none;
-	 -moz-box-shadow: none;
-		  box-shadow: none;
+	box-shadow: none;
 }
 
 .failure-message,
@@ -456,8 +422,6 @@ span.help-option-title {
 	background-color: #505050;
 	color: #f5f5f5;
 	padding: 7px;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
 	border-radius: 3px;
 	margin-bottom: 20px;
 	border-bottom: 1px solid #626262;
@@ -479,9 +443,7 @@ span.help-option-title {
 
 .btn-switch input:focus {
 	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-	-webkit-box-shadow: none;
-	   -moz-box-shadow: none;
-			box-shadow: none;
+	box-shadow: none;
 }
 
 .search .option-name:hover {
@@ -515,9 +477,7 @@ span.help-option-title {
 	left: 15px;
 	right: 15px;
 	overflow-y: auto;
-	-webkit-border-radius: 3px;
-	 -moz-border-radius: 3px;
-		  border-radius: 3px;
+	border-radius: 3px;
 }
 
 #FeedFilterDialog_FilterBlock {
@@ -531,10 +491,8 @@ span.help-option-title {
 	padding: 0;
 	font-size: 12px;
 	line-height: 18px;
-	border: 1px solid #626262;;
-	-webkit-border-radius: 4px;
-	 -moz-border-radius: 4px;
-		  border-radius: 4px;
+	border: 1px solid #626262;
+	border-radius: 4px;
 }
 
 #FeedFilterDialog_FilterHeader {
@@ -543,7 +501,6 @@ span.help-option-title {
 	margin-top: 5px;
 	padding-left: 6px;
 	height: 23px;
-	border-bottom: 1px solid #626262;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
 
