--- a/crates/bergamot-server/webui/style.css
+++ b/crates/bergamot-server/webui/style.css
@@ -174,24 +174,11 @@ th {
 
 .spinner {
     color: #0088cc;
-    -webkit-animation: spin 1s linear infinite;
-    -moz-animation: spin 1s linear infinite;
     animation: spin 1s linear infinite;
 }
 
-@-moz-keyframes spin {
-    100% {
-        -moz-transform: rotate(360deg);
-    }
-}
-@-webkit-keyframes spin {
-    100% {
-        -webkit-transform: rotate(360deg);
-    }
-}
 @keyframes spin {
     100% {
-        -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
     }
 }
@@ -251,12 +238,6 @@ body.navfixed .navbar-fixed-top {
 }
 
 body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
-    -webkit-box-shadow:
-        0 1px 3px rgba(0, 0, 0, 0.25),
-        inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-    -moz-box-shadow:
-        0 1px 3px rgba(0, 0, 0, 0.25),
-        inset 0 -1px 0 rgba(0, 0, 0, 0.1);
     box-shadow:
         0 1px 3px rgba(0, 0, 0, 0.25),
         inset 0 -1px 0 rgba(0, 0, 0, 0.1);
@@ -295,8 +276,6 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
     margin-top: 0px;
     cursor: pointer;
     position: absolute;
-    -webkit-border-radius: 18px;
-    -moz-border-radius: 18px;
     border-radius: 18px;
 }
 
@@ -342,48 +321,27 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 
 #PlayCaretButton:hover #PlayCaret {
     opacity: 1;
-    filter: alpha(opacity=100);
 }
 
-@-webkit-keyframes play-rotate {
+@keyframes play-rotate {
     0% {
-        -webkit-transform: rotate(0);
+        transform: rotate(0);
     }
     100% {
-        -webkit-transform: rotate(360deg);
-    }
-}
-@-moz-keyframes play-rotate {
-    0% {
-        -moz-transform: rotate(0);
-    }
-    100% {
-        -moz-transform: rotate(360deg);
-    }
-}
-@-ms-keyframes play-rotate {
-    0% {
-        -ms-transform: rotate(0);
-    }
-    100% {
-        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
     }
 }
 
 #PlayAnimation {
     position: absolute;
     z-index: 4;
-    -webkit-background-size: 70px 70px;
-    -moz-background-size: 70px 70px;
     background-size: 70px 70px;
     background-position: center;
     width: 50px;
     height: 50px;
     cursor: pointer;
     pointer-events: none;
-    -webkit-animation: play-rotate 1s linear infinite;
-    -moz-animation: play-rotate 1s linear infinite;
-    -ms-animation: play-rotate 1s linear infinite;
+    animation: play-rotate 1s linear infinite;
 }
 
 #PlayAnimation.play {
@@ -416,12 +374,10 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 
 .navbar-inner i {
     opacity: 0.8;
-    filter: alpha(opacity=80);
 }
 
 #InfoBlock div:hover i {
     opacity: 1;
-    filter: alpha(opacity=100);
 }
 
 #StatusTime.orange {
@@ -434,7 +390,6 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 
 .navbar-inner .btn:hover i {
     opacity: 1;
-    filter: alpha(opacity=100);
 }
 
 #NavLinks {
@@ -512,8 +467,6 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 .navbar-search .search-query.focused {
     width: 130px;
     padding: 3px 28px 3px 25px;
-    -webkit-border-radius: 12px;
-    -moz-border-radius: 12px;
     border-radius: 12px;
 }
 
@@ -528,7 +481,6 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
     right: 9px;
     cursor: pointer;
     opacity: 0.65;
-    filter: alpha(opacity=65);
 }
 
 .search-caret-block {
@@ -549,7 +501,6 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 
 .search-caret-button:hover .caret {
     opacity: 1;
-    filter: alpha(opacity=100);
 }
 
 /* MENUS */
@@ -651,8 +602,6 @@ ul.dropdown-menu > li > a > i {
     [class^="img-"],
     [class*=" img-"] {
         background-image: url("./img/icons-2x.png");
-        -webkit-background-size: 700px 300px;
-        -moz-background-size: 700px 300px;
         background-size: 700px 300px;
     }
 }
@@ -1234,9 +1183,6 @@ td.dropdown-cell > div {
 }
 
 td.dropdown-cell > div:hover {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
 }
 
@@ -1298,13 +1244,11 @@ textarea[readonly],
     margin-top: 6px;
     margin-left: 10px;
     opacity: 0.6;
-    filter: alpha(opacity=60);
     outline: 0;
 }
 
 .modal-header .close:hover {
     opacity: 0.9;
-    filter: alpha(opacity=90);
 }
 
 .modal-header .back {
@@ -1315,14 +1259,12 @@ textarea[readonly],
     font-weight: bold;
     line-height: 18px;
     opacity: 0.6;
-    filter: alpha(opacity=60);
     outline: 0;
 }
 
 .modal-header .back:hover {
     cursor: pointer;
     opacity: 0.9;
-    filter: alpha(opacity=90);
 }
 
 .modal-header .back-hidden:hover {
@@ -1430,7 +1372,6 @@ ul.help > li {
     width: 0;
     height: 0;
     opacity: 0;
-    filter: alpha(opacity=0);
 }
 
 /* BEGIN: PopupNotification alerts */
@@ -1444,7 +1385,6 @@ ul.help > li {
     overflow: auto;
     text-align: center;
     opacity: 0.9;
-    filter: alpha(opacity=90);
 }
 
 .alert-center-small {
@@ -2035,11 +1975,7 @@ div.multiset-toolbar button {
     outline: none;
     border: none;
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
     box-shadow: none;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
     border-radius: 0;
 }
 
@@ -2111,9 +2047,7 @@ table.table-drag > tbody > tr:hover > td:first-child,
 }
 
 table.table-drag > tbody > tr > td:first-child {
-    cursor: move;
-    cursor: -moz-grab;
-    cursor: -webkit-grab;
+    cursor: grab;
 }
 
 table.table-drag > tbody > tr > td:first-child > div.check {
@@ -2122,9 +2056,7 @@ table.table-drag > tbody > tr > td:first-child > div.check {
 
 #TableDragBox table.table-drag > tbody > tr > td:first-child,
 #TableDragBox table.table-drag > tbody > tr > td:first-child > div.check {
-    cursor: move;
-    cursor: -moz-grabbing;
-    cursor: -webkit-grabbing;
+    cursor: grabbing;
 }
 
 tr.drag-source > td > * {
@@ -2324,8 +2256,6 @@ body.phone,
     width: 85%;
     padding: 4px 28px 4px 28px;
     font-size: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
     border-radius: 16px;
     margin-bottom: 5px;
     margin-top: 1px;
@@ -2386,8 +2316,6 @@ body.phone,
     display: block;
     position: absolute;
     border-width: 2px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
     border-radius: 3px;
 }
 
