--- a/crates/bergamot-server/webui/bootstrap-compat.css
+++ b/crates/bergamot-server/webui/bootstrap-compat.css
@@ -582,11 +582,11 @@ input, select, textarea, button {
 	position: fixed;
 	top: 50%;
 	left: 50%;
+	transform: translate(-50%, -50%);
 	z-index: 1050;
 	display: none;
-	width: 560px;
-	margin-left: -280px;
-	margin-top: -250px;
+	width: 90%;
+	max-width: 560px;
 	background-color: var(--pico-card-background-color, #fff);
 	border: 1px solid var(--pico-form-element-border-color, #999);
 	border-radius: var(--pico-border-radius, 6px);
@@ -595,14 +595,19 @@ input, select, textarea, button {
 }
 
 .modal.fade {
-	transition: opacity 0.3s linear, top 0.3s ease-out;
+	transition: opacity 0.3s linear, transform 0.3s ease-out;
 	opacity: 0;
-	top: -25%;
+	transform: translate(-50%, -75%);
 }
 
 .modal.fade.in {
 	opacity: 1;
-	top: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.modal-max.fade,
+.modal-max.fade.in {
+	transform: none;
 }
 
 .modal-header {
@@ -672,27 +677,19 @@ button.close,
 }
 
 .modal-mini {
-	width: 420px;
-	margin-left: -210px;
+	max-width: 420px;
 }
 
 .modal-small {
-	width: 480px;
-	margin-left: -240px;
+	max-width: 480px;
 }
 
 .modal-max {
-	margin: 15px;
-	left: 0;
-	top: 0;
-	bottom: 0;
-	right: 0;
+	inset: 15px;
+	transform: none;
 	width: auto;
+	max-width: none;
 	height: auto;
-}
-
-.modal-center {
-	margin-top: 0;
 }
 
 .modal-padded .modal-body {
@@ -719,8 +716,7 @@ button.close,
 }
 
 .log-dialog {
-	width: 640px;
-	margin-left: -320px;
+	max-width: 640px;
 }
 
 
@@ -979,6 +975,7 @@ table.datatable {
 	padding: 20px;
 	top: 50%;
 	left: 50%;
+	transform: translate(-50%, -50%);
 	z-index: 2000;
 	overflow: auto;
 	text-align: center;
@@ -987,12 +984,10 @@ table.datatable {
 
 .alert-center-small {
 	width: 200px;
-	margin: -80px 0 0 -100px;
 }
 
 .alert-center-medium {
 	width: 400px;
-	margin: -80px 0 0 -200px;
 }
 
 
