--- a/crates/bergamot-server/webui/style.css
+++ b/crates/bergamot-server/webui/style.css
@@ -1343,7 +1343,104 @@ textarea[readonly],
     width: 470px;
 }
 
+/* Pico-scoped horizontal form layout for modals (CSS grid) */
+.modal.pico .form-horizontal .control-group {
+    display: grid;
+    grid-template-columns: 10rem 1fr;
+    column-gap: 1rem;
+    align-items: center;
+    margin-bottom: 12px;
+}
+
+.modal.pico .form-horizontal .control-group:last-child {
+    margin-bottom: 0;
+}
+
+.modal.pico .form-horizontal .retain-margin .control-group:last-child {
+    margin-bottom: 15px;
+}
+
+.modal.pico .form-horizontal .control-group-last {
+    margin-bottom: 0;
+}
+
+.modal.pico .form-horizontal .control-group::before,
+.modal.pico .form-horizontal .control-group::after {
+    display: none;
+    content: none;
+}
+
+.modal.pico .form-horizontal .control-label {
+    float: none;
+    width: auto;
+    padding-top: 0;
+    text-align: right;
+    white-space: nowrap;
+    margin: 0;
+}
+
+.modal.pico .form-horizontal label {
+    margin-bottom: 0;
+}
+
+.modal.pico .form-horizontal .controls {
+    margin-left: 0;
+    min-width: 0;
+}
+
+.modal.pico .form-horizontal .controls :where(input, select, textarea):not([type="checkbox"], [type="radio"]) {
+    width: 100%;
+    margin-bottom: 0;
+    --pico-form-element-spacing-vertical: 0.375rem;
+    --pico-form-element-spacing-horizontal: 0.75rem;
+}
+
+.modal.pico .input-medium,
+.modal.pico .input-xlarge,
+.modal.pico .input-xblarge,
+.modal.pico .input-xxlarge {
+    width: 100%;
+}
+
+.modal.pico .form-horizontal .help-block {
+    grid-column: 2;
+    margin-top: 4px;
+    margin-bottom: -2px;
+    line-height: 18px;
+}
+
+.phone .modal.pico .form-horizontal .control-group {
+    grid-template-columns: 1fr;
+}
+
+.phone .modal.pico .form-horizontal .control-label {
+    text-align: left;
+    white-space: normal;
+}
+
+.phone .modal.pico .form-horizontal .help-block {
+    grid-column: 1;
+}
+
+.modal.pico button.btn,
+.modal.pico a.btn {
+    width: auto;
+    padding: 4px 12px;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.modal.pico select {
+    margin-bottom: 0;
+}
+
 /* END: override bootstrap styles for modals */
+
+.modal-bottom-toolbar {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 6px;
+}
 
 .modal-bottom-toolbar .btn {
     margin-top: 12px;
