refactor(webui): remove vendor-prefixed CSS and JS properties
Replace vendor-prefixed transforms (-webkit-, -moz-, -ms-, -o-) in
refreshAnimationFrame() with a single unprefixed transform property.
Remove -webkit-grabbing cursor fallback. Replace -webkit-min-device-
pixel-ratio media query with standard min-resolution: 2dppx.

--- a/crates/bergamot-server/webui/style.css
+++ b/crates/bergamot-server/webui/style.css
@@ -614,7 +614,7 @@ ul.dropdown-menu > li > a > i {
 }
 
 /* HiDPI screens */
-@media only screen and (-webkit-min-device-pixel-ratio: 2) {
+@media only screen and (min-resolution: 2dppx) {
     [class^="icon-"],
     [class*=" icon-"],
     [class^="img-"],
@@ -2951,7 +2951,6 @@ table > thead > tr > th.table-selector {
 	text-align: center;
 	display: none;
 	cursor: grabbing;
-	cursor: -webkit-grabbing;
 	z-index: 5000;
 }
 
