refactor(webui): replace navbar sprite icons with Material Icons
Migrate speed, time, refresh, search-clear, and upload status icons
from the PNG sprite sheet to Material Icons font glyphs. This removes
dependence on background-position sprites for these commonly-used
icons while keeping the specialized priority ring/circle and play/pause
button sprites that have no direct Material Icon equivalent.

--- a/crates/bergamot-server/webui/style.css
+++ b/crates/bergamot-server/webui/style.css
@@ -44,6 +44,11 @@
     vertical-align: top;
 }
 
+.navbar-icon {
+    font-size: 14px;
+    vertical-align: middle;
+}
+
 body {
     padding-left: 0;
     padding-right: 0;
@@ -406,6 +411,10 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
     color: #ffa15a;
 }
 
+#StatusTimeIcon.orange {
+    color: #f08929;
+}
+
 .navbar-inner .btn:hover i {
     opacity: 1;
 }
@@ -499,6 +508,7 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
     right: 9px;
     cursor: pointer;
     opacity: 0.65;
+    color: #fff;
 }
 
 .search-caret-block {
