refactor(webui): remove clearfix pseudo-elements and float from pull utilities
Remove ::before/::after clearfix hacks from .row-fluid and .clearfix
since .row-fluid already uses display: flex. Remove float from
.pull-left/.pull-right, keeping only margin-based alignment which
works in both flex and block contexts.

--- a/crates/bergamot-server/webui/bootstrap-compat.css
+++ b/crates/bergamot-server/webui/bootstrap-compat.css
@@ -91,16 +91,6 @@ input, select, textarea, button {
 	margin-right: -15px;
 }
 
-.row-fluid::before,
-.row-fluid::after {
-	content: "";
-	display: table;
-}
-
-.row-fluid::after {
-	clear: both;
-}
-
 .row-fluid > [class*="span"] {
 	box-sizing: border-box;
 	padding-left: 15px;
@@ -115,18 +105,8 @@ input, select, textarea, button {
 .span9  { width: 75%; }
 .span12 { width: 100%; }
 
-.pull-left  { float: left; margin-right: auto; }
-.pull-right { float: right; margin-left: auto; }
-
-.clearfix::before,
-.clearfix::after {
-	content: "";
-	display: table;
-}
-
-.clearfix::after {
-	clear: both;
-}
+.pull-left  { margin-right: auto; }
+.pull-right { margin-left: auto; }
 
 .hide {
 	display: none;
