--- a/crates/bergamot-server/webui/light-theme.css
+++ b/crates/bergamot-server/webui/light-theme.css
@@ -16,6 +16,15 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
+:root {
+	--bergamot-color-success: #468847;
+	--bergamot-color-danger: #b94a48;
+	--bergamot-color-warning: #f89406;
+	--bergamot-color-info: #3a87ad;
+	--bergamot-color-link: #0088cc;
+	--bergamot-color-drag-finish: #E6FAE4;
+}
+
  
 html {
 	scrollbar-color: #bbb #f5f5f5;
